--- a/01. Web Fundamentals - HTML, CSS/Lab/lab/styles/pr13_contact-us-form.css
+++ b/01. Web Fundamentals - HTML, CSS/Lab/lab/styles/pr13_contact-us-form.css
@@ -25,6 +25,6 @@ form input[type=submit], input[type=reset] {
     height: 30px;
 }
 
-input[type=submit]:hover, input[type=reset]:hover, input[type=text]:hover {
+input[type=text]:hover, input[type=email]:hover {
     background-color: lightgray;
 }
